@@ -1,0 +1,60 @@
+# -*- cmake -*-
+
+# Here we have a bunch of user defined commands that are being loaded at the
+# very start of the makefile generation process. You can use this setup file to
+# for example change compiler flags.
+
+# Enable the RW_ASSERT() macro. [ON|OFF]
+SET(RW_ENABLE_ASSERT ON)
+
+# Enable building tests, examples and sandbox
+SET(RW_BUILD_TESTS ON)
+SET(RW_BUILD_EXAMPLES ON)
+SET(RW_BUILD_SANDBOX OFF)
+
+# If you want to use the new Xerces based XML loader then set to ON
+SET(USE_XERCES OFF)
+
+# Specify the root dir of your boost installation
+# SET(BOOST_ROOT "")
+
+
+# With Visual Studio maybe you want to define one or more of the following:
+# if (DEFINED MSVC)
+#   add_definitions(-DNOMINMAX)
+#   add_definitions(-D_HAS_ITERATOR_DEBUGGING=0)
+#   add_definitions(-D_SECURE_SCL=0)
+#   add_definitions(-D_SCL_SECURE_NO_WARNINGS)
+#   add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+# endif ()
+
+# If you have optional libraries with include files outside of RobWork/ext/, you
+# can add paths to these directories like this:
+# list(APPEND CMAKE_REQUIRED_INCLUDES /path/to/somewhere)
+
+# By changing this variable you can *override* the default compile flags for
+# RobWork. Always set the compile flags to "" when you are overriding, so that
+# you can provide flags that you can share with other projects using
+# CMAKE_CXX_FLAGS directly below.
+# set(RW_CXX_FLAGS "")
+
+# You can add your own specific compile flags (without overriding RobWork
+# defaults) like this:
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -fmessage-length=0")
+
+# If you want to compile sandbox then uncomment the following:
+# SET(COMPILE_SANDBOX true)
+
+# Add files to the library using the predefined USER variables.
+# If you f.ex. want to add KDTree.cpp to sandbox library add the following
+#
+# SET(RW_SANDBOX_USER_FILES ${RW_SANDBOX_USER_FILES} KDTree.cpp)
+#
+# Other variables include RW_USER_FILES, RW_DRAWABLE_USER_FILES, etc.
+
+#
+# If you want to use the new Xerces based XML loader then uncomment the following
+# SET(USE_XERCES True)
+
+# Set compiler to Intel C++ computer (currently there is trouble with lua)
+# set(CMAKE_CXX_COMPILER icc)
